--- a/facemanager/FaceManager.csproj
+++ b/facemanager/FaceManager.csproj
@@ -71,6 +71,10 @@
     <Reference Include="ZedGraph">
       <HintPath>..\emgucv\ZedGraph.dll</HintPath>
     </Reference>
+    <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+      <Private>False</Private>
+      <Package>gtk-sharp-2.0</Package>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.desktop">
