--- a/facemanager/FaceManager.csproj
+++ b/facemanager/FaceManager.csproj
@@ -75,6 +75,7 @@
       <Private>False</Private>
       <Package>gtk-sharp-2.0</Package>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.desktop">
@@ -84,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="MainWindow.cs" />
+    <Compile Include="PhotoEditorWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\command_service\CommandService.csproj">
